# rctd-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  analysis_region3.qmd  pyproject.toml  test_py.py  vignette_bench.sh
.claude/: settings.json
.claude/skills/rctd-py/: SKILL.md
.github/workflows/: ci.yml  lint.yml  pages.yml  publish.yml  test.yml
autoresearch/: bench_cpu.py  benchmark.py  profile_run.py  program.md  results.tsv
benchmarks/: README.md  bench_all_modes.py  bench_compare_optimizations.py
docs/: index.html  tutorial.html
docs/plans/: 100-percent-matching-roadmap.md
examples/: tutorial.ipynb  tutorial.py
scripts/: SBATCH_benchmark_gpu.sh  SBATCH_benchmark_sigma.sh  SBATCH_compare_fast.sh  SBATCH_compare_xenium.sh  SBATCH_compare_xenium_gpu.sh  SBATCH_compare_xenium_sigma72.sh  SBATCH_compare_xenium_v2.sh  SBATCH_extract_r_doublet.sh  SBATCH_extract_r_internals.sh  SBATCH_quick_doublet.sh  SBATCH_r_rctd_debug.sh  SBATCH_r_xenium_timing.sh  SBATCH_regenerate_report_data.sh  SBATCH_render_report.sh  SBATCH_test_constrain_fix.sh  SBATCH_test_sweeps.sh  SBATCH_validate_xenium.sh  SBATCH_xenium_report.sh  benchmark.py  benchmark_gpu.py  benchmark_gpu_vs_cpu.py  benchmark_r.R  benchmark_r_irwls_only.R  benchmark_region3.py  benchmark_xenium.py  compare_implementations.py  compare_r_python.py  compare_r_vs_python_xenium.py  convert_reference.R  debug_doublet_deep.py  debug_final_verification.py  debug_investigation.py  debug_normalization.py  debug_pair_scoring.py  debug_singlet_init.py  debug_singlet_score.py  debug_solver_root_cause.py  extract_q_mats.R  extract_r_doublet_full.R  extract_r_rctd_internals.R  (+11 more)
src/rctd/: __init__.py  _cuda_ext.py  _doublet.py  _full.py  _irwls.py  _likelihood.py  _multi.py  _normalize.py  _protein.py  _rctd.py  _reference.py  _sigma.py  _simplex.py  _types.py  cli.py
src/rctd/csrc/: fused_irwls_kernel.cu
tests/: conftest.py  test_blackwell_perf.py  test_class_df.py  test_cli.py  test_compile_fallback.py  test_concordance.py  test_counts_min.py  test_doublet.py  test_doublet_prestage.py  test_fp32_concordance.py  test_full.py  test_irwls.py  test_likelihood.py  test_multi.py  test_normalize.py  test_performance.py  test_pixel_mask.py  test_protein_bootstrap.py  test_protein_curated.py  test_protein_e2e.py  test_protein_normalize.py  test_protein_recovery.py  test_protein_regression.py  test_protein_smoke.py  test_q_matrices.py  test_rctd.py  test_reference.py  test_sigma.py  test_simplex.py
tests/fixtures/vignette/: r_results_df.csv  r_weights.csv
